<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    android:fitsSystemWindows="true"
    android:theme="@style/Theme.A4tests"
    tools:context=".presentation.TestResultFragment">

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/stringYourMark"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/testsResultMark"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:gravity="center"
        android:textColor="@color/colorWhite"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvResult" />

    <TextView
        android:id="@+id/tvRightQuestions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stringCountOfRightQuestions"
        app:layout_constraintEnd_toEndOf="@id/cv1"
        app:layout_constraintStart_toStartOf="@id/cv1"
        app:layout_constraintTop_toBottomOf="@id/testsResultMark" />

    <TextView
        android:id="@+id/tvPercentageRightQuestions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stringPercentageOfRightAnswers"
        app:layout_constraintEnd_toEndOf="@id/cv2"
        app:layout_constraintStart_toStartOf="@id/cv2"
        app:layout_constraintTop_toBottomOf="@id/testsResultMark" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv1"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:layout_margin="10dp"
        app:layout_constraintEnd_toStartOf="@id/cv2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvRightQuestions">

        <TextView
            android:id="@+id/tvRightAnswersCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/stringRightAnswersCount"
            android:textColor="@color/colorAccent"
            android:textSize="23sp" />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv2"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:layout_margin="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/cv1"
        app:layout_constraintTop_toBottomOf="@id/tvPercentageRightQuestions">

        <TextView
            android:id="@+id/tvPercentage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/stringPercentage"
            android:textColor="@color/colorAccent"
            android:textSize="23sp" />
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnGoBackToTestList"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="30dp"
        android:backgroundTint="@color/white"
        android:text="@string/stringBackToListOfTests"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        app:backgroundTint="@color/white"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>